Updating package control files for release 1.1.0

--- a/messages/install.txt
+++ b/messages/install.txt
@@ -10,4 +10,4 @@ How to make it work:
 - Your getters and setters should be ready to go.
 
 I'm still working out the kinks on indentation and automatically selecting
-the newly generated text. This will hopefully be present in the next release.
+the newly generated text. This will hopefully be present in a future release.
