--- a/messages/install.txt
+++ b/messages/install.txt
@@ -1,13 +1,12 @@
 The package by default installs a menu entry in the Tools menu, under Java.
-It also comes bound to the Ctrl+K + Ctrl+J key combination sequence.
+It also comes bound to the Ctrl+K then Ctrl+J key combination sequence 
+(or Command+K then Command+J on Macs).
 
 How to make it work:
 
 - Select the properties from your class from which you want to generate
   getters and setters.
 
-- Go to Tools->Java->Java Setter Getter (or hit the Ctrl+K + Ctrl +J sequence)
+- Go to Tools->Java->Java Setter Getter (or hit the Ctrl+K then Ctrl+J sequence)
 - Your getters and setters should be ready to go.
 
-I'm still working out the kinks on indentation and automatically selecting
-the newly generated text. This will hopefully be present in a future release.
